# eow-data-structures

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/eow_data_structures/adapters/: alignment.py
src/eow_data_structures/formats/: elo.py
