[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm[toml]>=3.4.3",
    "construct>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "eow-data-structures"
description = "Construct file definitions for Echoes of Wisdom files"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dynamic = ["version"]

dependencies = [
    "construct>=2.10.70",  # 2.10.70 includes a fix for compiled structs building
]


[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/steven11sjf/eow-data-structures"

[project.optional-dependencies]
test = [
    "pytest>=8.3.1",  # see https://github.com/pytest-dev/pytest/issues/12608
    "pytest-cov",
]

# Entry Points for PyInstaller
[project.entry-points.pyinstaller40]
hook-dirs = "eow_data_structures.__pyinstaller:get_hook_dirs"

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/eow_data_structures/version.py"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
# asyncio_mode = "auto"
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "W", "C90", "I", "UP"]
src = ["src"]

# Version to target for generated code.
target-version = "py38"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 25.
# Defaults to 10, but we're being very flexible right now
max-complexity = 25
